--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="./images/Frame.png" type="image/x-icon">
     <title>Gamer</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -23,6 +24,7 @@
                 <li><a href="">Developers</a></li>
                 <li><a class="btn-follow-us-on" href="">Follow Us On  <i class="fa-brands fa-youtube fa-xl" style="color: #e30202;"></i> <i class="fa-brands fa-tiktok fa-xl" style="color: #000000;"></i></a></li>
             </ul>
+            <!-- <img src="./images/tiktok.png" alt=""> -->
         </div>
         </nav>
 
@@ -104,9 +106,11 @@
         <section class="online-games-container">
 
             <div class="online-games-content">
+      
                 <h2><span class="gradient-heading">Play Instantly,</span> <br>No Downloads <br>No Installs.</h2>
                 <p>Play games online for free without downloading. Just click the Play button and play instantly in your browser.</p>
-            </div>
+
+        </div>
 
             <div class="online-games-img-container">
                 <img class="player-image-big" src="./images/Rectangle 55.png" alt="">
@@ -117,7 +121,7 @@
 
         <!-- category section -->
         <section class="category-container">
-
+<p style="background-color: #e30202; height: 100px;">dhfisdjhfjd</p>
         </section>
 
 
