added media query for responsive

--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                 <p>Lisbon, Portugal</p>
                 <p>Zoetermeer, Netherlands</p>
                 <p>Lisbon, Portugal</p>
-                <p>London, United Kingdomß</p>
+                <p>London, United Kingdom</p>
                 <p>Lisbon, Portugal</p>
             </div>
         </div>
