--- a/index.html
+++ b/index.html
@@ -184,9 +184,9 @@
 
 
 
-        <!-- <div class="career-img">
-            <!-- <img src="./images/Group 65.png" alt=""> -->
-        <!-- </div> --> 
+        <div class="career-img">
+            <img src="./images/Group 65.png" alt="">
+        </div> 
     </div>
 </section>
 
